tests-integration/tests/snapshots/e2e__mixed__check_before.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "Makefile",
      "status": "missing"
    },
    {
      "changed": false,
      "path": "app.rs",
      "status": "missing"
    },
    {
      "changed": false,
      "path": "legacy.rs",
      "status": "replaceable"
    },
    {
      "changed": false,
      "path": "not_ignored_without_repository.rs",
      "status": "missing"
    },
    {
      "changed": false,
      "path": "notes.txt",
      "status": "unsupported"
    },
    {
      "changed": false,
      "path": "types.d.ts",
      "status": "missing"
    }
  ]
}
