tests-integration/tests/snapshots/e2e__mixed__format.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "Makefile",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "app.rs",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "legacy.rs",
      "status": "replaceable"
    },
    {
      "changed": true,
      "path": "not_ignored_without_repository.rs",
      "status": "missing"
    },
    {
      "changed": false,
      "path": "notes.txt",
      "status": "unsupported"
    },
    {
      "changed": true,
      "path": "types.d.ts",
      "status": "missing"
    }
  ]
}
