tests-integration/tests/snapshots/e2e__mixed__format_idempotent.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "Makefile",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "app.rs",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "legacy.rs",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "not_ignored_without_repository.rs",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "notes.txt",
      "status": "unsupported"
    },
    {
      "changed": false,
      "path": "types.d.ts",
      "status": "clean"
    }
  ]
}
